--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@
 /Guia_8-Ejercicio9/target/
 /Guia_8-Ejercicio10/target/
 /Guia_11-Ejercicio11/target/
+/Guia_8-Ejercicio11/target/
+/Guia_8-Ejercicio12/target/
