--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,13 @@
 /Guia_8-Extra5/target/
 /Guia_8-Extra6/target/
 /DesafioGrupal3/target/
+/Guia_8-ActividadExtra2/target/
+/Guia_JUnit-Ejercicio1/nbproject/private/
+/Guia_JUnit-Ejercicio1/build/
+/Guia_JUnit-Ejercicio1/dist/
+/Guia_JUnit-Ejercicio2/nbproject/
+/Guia_JUnit-Ejercicio2/target/
+/PruebasJUnit/target/
+/PruebasJUnit/nbproject/
+/Guia_JUnit-Ejercicio1B/nbproject/
+/Guia_JUnit-Ejercicio1B/target/
