Guia_Colecciones-Ej1

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 /PruebasJUnit/nbproject/
 /Guia_JUnit-Ejercicio1B/nbproject/
 /Guia_JUnit-Ejercicio1B/target/
+/Guia_Colecciones-Ej1/target/
+/Guia_Colecciones-Ej1/nbproject/
