Guía Relaciones - Ejercicio 2 terminado

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@
 /Guia_Colecciones-Ej3/target/
 /Guia_Colecciones-Ej4/target/
 /Guia_Relaciones-Ejercicio1/target/
+/Guia_Relaciones-Ejercicio2/target/
