Guía_Excepciones-Ej1

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@
 /Guia_Relaciones-Ejercicio1/target/
 /Guia_Relaciones-Ejercicio2/target/
 /Guia_Herencia/target/
+/Guia_Herencia-Ej1/target/
+/Guia_Excepciones-Ejercicio1/target/
