Guía MySQL - Actividades texto guía

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@
 /Guia_Herencia-Ej1/target/
 /Guia_Excepciones-Ejercicio1/target/
 /Guia_Exceptiones-Ejercicio2/target/
+/Guia_Excepciones-Ejercicio3/target/
