Guía JDBC - Ejercicio 1 (puntos a y b)

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,12 @@
 /Guia_Excepciones-Ejercicio1/target/
 /Guia_Exceptiones-Ejercicio2/target/
 /Guia_Excepciones-Ejercicio3/target/
+/Prueba JDBC/nbproject/private/
+/Prueba JDBC/build/
+/Prueba JDBC/dist/
+/Guia_JDBC-Mascotas/nbproject/private/
+/Guia_JDBC-Ej1/nbproject/private/
+/Guia_JDBC-Ej1 - copia/nbproject/private/
+/Guia_JDBC-Ej1(grupal2)/nbproject/private/
+/Guia_JDBC-Ej1(grupal)/nbproject/private/
+/Guia_JDBC-Ej1/build/
