--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,6 @@
 /Guia_JDBC-Ej1(grupal2)/nbproject/private/
 /Guia_JDBC-Ej1(grupal)/nbproject/private/
 /Guia_JDBC-Ej1/build/
+/Guia_JPA-Ejercicio1/nbproject/private/
+/Guia_JPA-Ejercicio1/build/
+/Guia_JPA-Ejercicio1_v2/target/
